--- a/src/pages/List.module.css
+++ b/src/pages/List.module.css
@@ -10,14 +10,19 @@ h2 {
 }
 
 .list {
+  min-width: 400px;
+  width: 50%;
   list-style-type: none;
-  padding: 0;
+  background-color: #393939;
+  border-radius: 20px;
+  border: 2px solid black;
+  padding: 1%;
+  border-style: outset;
 }
 
 .listItem {
   padding: 10px;
   margin-bottom: 10px;
-  background-color: #3c3c3c;
   border-radius: 4px;
 }
 
