--- a/src/pages/List.module.css
+++ b/src/pages/List.module.css
@@ -3,6 +3,8 @@
   background-color: #2c2c2c;
   color: white;
   border-radius: 8px;
+  margin-top: 1%;
+  margin-left: 3%;
 }
 
 h2 {
@@ -11,7 +13,7 @@ h2 {
 
 .list {
   min-width: 400px;
-  width: 50%;
+  width: 70%;
   list-style-type: none;
   background-color: #393939;
   border-radius: 20px;
